--- a/pom.xml
+++ b/pom.xml
@@ -52,13 +52,13 @@
             <version>1.19.4</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-<dependency>
+<!--<dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-databind</artifactId>
     <version>2.9.8</version>
-</dependency>
+</dependency>-->
 
-
+     
     </dependencies>
 
     <build>
