--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,11 @@
     <artifactId>jackson-databind</artifactId>
     <version>2.9.8</version>
 </dependency>-->
-
+<dependency>
+    <groupId>org.mongodb</groupId>
+    <artifactId>mongo-java-driver</artifactId>
+    <version>2.13.0</version>
+</dependency>
      
     </dependencies>
 
